tests/ui/invalid_pymethod_proto_args_py.stderr
error: Expected 1 arguments, got 0
 --> tests/ui/invalid_pymethod_proto_args_py.rs:8:8
  |
8 |     fn __truediv__(&self, _py: Python) -> PyResult<()> {
  |        ^^^^^^^^^^^
